--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -3,14 +3,16 @@
   "about": "About me",
   "contact": "Contact",
 
-  "position": "FrontEnd Developer & UX/UI Designer",
+  "position": "UX/UI Designer & FrontEnd Developer",
   "mailCopy": "Email copied",
 
   "contactTitle": "Let's talk?",
   "contactText": "If you like my profile, don't hesitate to contact me.",
   
-  "aboutDescription": "They call me LuisMi. I am a developer focused on FrontEnd and UX/UI designer with more than ten years of experience in the design industry and two years in the creation and development of web interfaces. My ability to combine visual design and technical functionality allows me to develop aesthetically pleasing and highly usable digital solutions.",
-  "aboutStackTitle":" Development Stack",
+  "aboutDescription": "They call me LuisMi. I am a UX/UI designer and developer focused on FrontEnd, with eight years of experience in the digital design industry and two years in the ideation, creation and development of web/apps interfaces. My ability to combine visual design and technical functionalities allows me to develop aesthetically pleasing and highly usable digital solutions.",	
+  "aboutStackTitle": "Stack of tools",
+  "aboutTitleDesigner": "As Designer",
+  "aboutTitleDeveloper": "As FrontEnd",
   "aboutExperience": "My experience has given me solid skills in digital design and the creation of innovative design systems, always seeking continuous training, the best tools and current trends.",
   "aboutLuismi": "LuisMi LuisMi LuisMi LuisMi LuisMi LuisMi LuisMi LuisMi LuisMi LuisMi LuisMi LuisMi LuisMi LuisMi LuisMi LuisMi",
   "aboutDownload": "Download CV Download CV Download CV Download CV Download CV Download CV Download CV Download CV",
