--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -17,8 +17,8 @@
   "aboutLuismi": "LuisMi LuisMi LuisMi LuisMi LuisMi LuisMi LuisMi LuisMi LuisMi LuisMi LuisMi LuisMi LuisMi LuisMi LuisMi LuisMi",
   "aboutDownload": "Download CV Download CV Download CV Download CV Download CV Download CV Download CV Download CV",
 
-  "projectsTitleDev": "FrontEnd Development",
-  "projectsTitleDesign": "UX/UI Design",
+  "projectsTitleDev": "Development",
+  "projectsTitleDesign": "Design",
 
   "beatsceneTitle": "BeatScene",
   "beatsceneExcerpt": "Application design for concert and live music lovers.",
