--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -18,8 +18,8 @@
     "aboutLuismi": "LuisMi LuisMi LuisMi LuisMi LuisMi LuisMi LuisMi LuisMi LuisMi LuisMi LuisMi LuisMi LuisMi LuisMi LuisMi LuisMi",
     "aboutDownload": "Descargar CV Descargar CV Descargar CV Descargar CV Descargar CV Descargar CV Descargar CV Descargar CV",
 
-    "projectsTitleDev": "Desarrollo FrontEnd",
-    "projectsTitleDesign": "Diseño UX/UI",
+    "projectsTitleDev": "Desarrollo",
+    "projectsTitleDesign": "Diseño",
 
     "beatsceneTitle": "BeatScene",
     "beatsceneExcerpt": "Diseño de aplicación para amantes de los conciertos y la música en vivo.",
