text and css changes

--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -40,7 +40,7 @@
     "beatsceneProcessTitle": "La investigación y el sistema de diseño",
     "beatsceneProcessText": "El proceso para diseñar la app empezó con un estudio completo e investigación en la experiencia de usuario, para luego seguir con los pasos necesarios para diseñar la interfaz. Desarrollando un sistema de diseño solido, con wireframes y una estructura enfocada en la interactividad del usuario con la app.",
 
-    "projectResult": "RESULTADO FINAL",
+    "beatsceneResult": "RESULTADO FINAL",
     "beatsceneResultText": "La App fue enteramente diseñada en Figma, el prototipo fue testeado con la herramienta Maze y se hicieron cambios dentro del interfaz según el feedback de los constantes testeos y feedbacks de los posibles usuarios.",
 
     "infoContact": "Contáctame",
